--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "angular-file-upload",
-    "version": "1.1.5",
-    "homepage": "https://github.com/nervgh/angular-file-upload",
+    "version": "1.1.6",
+    "homepage": "https://github.com/oneflow/angular-file-upload",
     "description": "Angular File Upload is a module for the AngularJS framework",
     "author": {
-        "name": "nerv",
-        "url": "https://github.com/nervgh"
+        "name": "Jack Gardner",
+        "url": "https://github.com/jackgardner"
     },
     "dependencies": {
         "coffee-script": "~1.6.2",
